tests/pass/03_control_flow.lang
функция main() : целое {
    целое счетчик = 0;

    пока (счетчик < 3) {
        счетчик = счетчик + 1;
    }

    если (счетчик == 3) {
        печать истина;
    } иначе {
        печать ложь;
    }
    вернуть 0;
}
