tests/fail/11_assign_expr.lang
функция main() : целое {
    целое а = 0;
    целое б = 0;
    а = б = 5;
    вернуть 0;
}
